fix: attempt to fix scrollbars and whitespace

--- a/src/App.css
+++ b/src/App.css
@@ -10,4 +10,16 @@ body {
     position: relative;
     min-height: 100%;
     margin: 0;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+.body::-webkit-scrollbar {
+    width: 0;
+}
+
+.body::-webkit-scrollbar-thumb {
+    background: transparent;
 }
