--- a/src/data/text.css
+++ b/src/data/text.css
@@ -25,6 +25,16 @@
     font-weight: normal;
 }
 
+@media (max-width: 355px) {
+  .subtitle {
+    font-size: 3rem;
+  }
+
+  .description {
+    font-size: 1rem;
+  }
+}
+
 .image-centered {
     text-align: center;
 }
