--- a/src/page-styles/Home.css
+++ b/src/page-styles/Home.css
@@ -28,7 +28,7 @@
     width: 100%;
   }
 
-  @media (max-width: 810px) {
+  @media (max-width: 945px) {
     .section {
       flex-direction: column;
       align-items: center;
@@ -62,6 +62,7 @@
     width: 100%;
   }
 }
+
   
 /* DIVISIONS */
 
